--- a/package.json
+++ b/package.json
@@ -7,9 +7,21 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel serve example/index.html --open",
-    "test": "jest --coverage && size-limit"
+    "lint": "eslint *.js",
+    "test": "jest --coverage && yarn lint && size-limit"
   },
   "devDependencies": {
+    "@logux/eslint-config": "^28.2.1",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-es5": "^1.3.1",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-import-helpers": "^0.1.4",
+    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-standard": "^4.0.0",
     "husky": "^2.3.0",
     "jest": "^24.8.0",
     "lint-staged": "^8.1.7",
@@ -17,13 +29,15 @@
     "parcel-plugin-svelte": "^3.0.1",
     "prettier": "^1.17.1",
     "size-limit": "^1.3.2",
-    "svelte": "^3.4.0"
+    "svelte": "^3.4.0",
+    "typescript": "^3.4.5"
   },
   "dependencies": {
     "storeon": "^0.8.3"
   },
   "lint-staged": {
     "*.js": [
+      "eslint --fix",
       "prettier --write",
       "git add"
     ]
@@ -42,6 +56,9 @@
       "limit": "128 B"
     }
   ],
+  "eslintConfig": {
+    "extends": "@logux/eslint-config/browser"
+  },
   "prettier": {
     "trailingComma": "all",
     "tabWidth": 2,
