--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel serve example/index.html --open",
-    "lint": "eslint *.js",
+    "lint": "eslint ./*.js",
     "test": "jest --coverage && yarn lint && size-limit"
   },
   "devDependencies": {
@@ -19,6 +19,7 @@
     "eslint-plugin-import-helpers": "^0.1.4",
     "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.0",
@@ -37,7 +38,6 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
       "prettier --write",
       "git add"
     ]
@@ -53,11 +53,14 @@
   "size-limit": [
     {
       "path": "index.js",
-      "limit": "128 B"
+      "limit": "298 B"
     }
   ],
   "eslintConfig": {
-    "extends": "@logux/eslint-config/browser"
+    "extends": "@logux/eslint-config/browser",
+    "plugins": [
+      "prettier"
+    ]
   },
   "prettier": {
     "trailingComma": "all",
