--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "eslint-plugin-import-helpers": "^0.1.4",
     "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-node": "^9.0.1",
-    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.0",
@@ -28,7 +27,6 @@
     "lint-staged": "^8.1.7",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-svelte": "^3.0.1",
-    "prettier": "^1.17.1",
     "size-limit": "^1.3.2",
     "svelte": "^3.4.0",
     "typescript": "^3.4.5"
@@ -38,7 +36,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write",
+      "eslint --fix",
       "git add"
     ]
   },
@@ -57,14 +55,6 @@
     }
   ],
   "eslintConfig": {
-    "extends": "@logux/eslint-config/browser",
-    "plugins": [
-      "prettier"
-    ]
-  },
-  "prettier": {
-    "trailingComma": "all",
-    "tabWidth": 2,
-    "singleQuote": true
+    "extends": "@logux/eslint-config/browser"
   }
 }
