--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storeon-svelte",
+  "name": "@storeon/svelte",
   "version": "0.2.0",
   "main": "index.js",
   "repository": "https://github.com/distolma/storeon-svelte.git",
