--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storeon/svelte",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "A tiny connector for Storeon and Svelte",
   "main": "index.js",
   "repository": "https://github.com/distolma/storeon-svelte.git",
@@ -49,10 +49,12 @@
   "browserslist": [
     "last 1 chrome versions"
   ],
-  "size-limit": [{
-    "path": "index.js",
-    "limit": "284 B"
-  }],
+  "size-limit": [
+    {
+      "path": "index.js",
+      "limit": "284 B"
+    }
+  ],
   "eslintConfig": {
     "extends": "@logux/eslint-config/browser"
   }
