--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
     "test": "jest --coverage && yarn lint && size-limit"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^30.0.2",
-    "eslint": "^6.1.0",
-    "eslint-config-standard": "^13.0.1",
+    "@logux/eslint-config": "^31.0.0",
+    "@size-limit/preset-small-lib": "^2.1.1",
+    "eslint": "^6.3.0",
+    "eslint-config-standard": "^14.1.0",
     "eslint-plugin-es5": "^1.4.1",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.14.1",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-jest": "^22.16.0",
+    "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-prefer-let": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "husky": "^3.0.2",
-    "jest": "^24.8.0",
-    "lint-staged": "^9.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^3.0.5",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.2.5",
     "parcel-bundler": "^1.12.3",
-    "parcel-plugin-svelte": "^4.0.0",
-    "size-limit": "^1.3.8",
-    "svelte": "^3.7.0",
-    "typescript": "^3.5.3"
+    "parcel-plugin-svelte": "^4.0.3",
+    "svelte": "^3.9.1",
+    "typescript": "^3.6.2"
   },
   "dependencies": {
-    "storeon": "^0.9.2"
+    "storeon": "^0.9.5"
   },
   "lint-staged": {
     "*.js": [
