--- a/package.json
+++ b/package.json
@@ -12,28 +12,29 @@
     "test": "jest --coverage && yarn lint && size-limit"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^31.0.0",
-    "@size-limit/preset-small-lib": "^2.1.1",
-    "eslint": "^6.3.0",
+    "@logux/eslint-config": "^35.0.1",
+    "@size-limit/preset-small-lib": "^2.2.3",
+    "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-es5": "^1.4.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.16.0",
-    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^23.1.1",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prefer-let": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "husky": "^3.0.5",
+    "eslint-plugin-unicorn": "^14.0.1",
+    "husky": "^3.1.0",
     "jest": "^24.9.0",
-    "lint-staged": "^9.2.5",
-    "parcel-bundler": "^1.12.3",
-    "parcel-plugin-svelte": "^4.0.3",
-    "svelte": "^3.9.1",
-    "typescript": "^3.6.2"
+    "lint-staged": "^9.5.0",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-svelte": "^4.0.5",
+    "svelte": "^3.16.5",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
-    "storeon": "^0.9.5"
+    "storeon": "^0.9.7"
   },
   "lint-staged": {
     "*.js": [
@@ -52,7 +53,7 @@
   "size-limit": [
     {
       "path": "index.js",
-      "limit": "281 B"
+      "limit": "282 B"
     }
   ],
   "eslintConfig": {
