--- a/package.json
+++ b/package.json
@@ -18,30 +18,31 @@
     "svelte": "^3.20.0"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^36.1.3",
+    "@logux/eslint-config": "^39.0.3",
     "@size-limit/dual-publish": "^4.5.0",
     "@size-limit/preset-small-lib": "^4.5.0",
-    "dual-publish": "^0.10.1",
-    "eslint": "^6.8.0",
+    "dual-publish": "^0.10.2",
+    "eslint": "^7.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.9.0",
+    "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^1.0.1",
+    "eslint-plugin-prettierx": "^0.12.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^19.0.1",
+    "eslint-plugin-unicorn": "^20.1.0",
     "husky": "^4.2.5",
-    "jest": "^26.0.0",
-    "lint-staged": "^10.2.2",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.7",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-svelte": "^4.0.6",
     "size-limit": "^4.5.0",
-    "storeon": "^2.0.2",
-    "svelte": "^3.22.2",
+    "storeon": "^3.0.1",
+    "svelte": "^3.23.0",
     "todomvc-app-css": "^2.3.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.3"
   },
   "lint-staged": {
     "*.js": [
